--- a/css/style.css
+++ b/css/style.css
@@ -22,14 +22,14 @@ h1 {
   padding: 30px 0px;
 }
 
-.container > a {
+.container a {
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 2em;
 }
 
-.container > a > img {
+.container a img {
   width: 100%;
   height: 100%;
   object-fit: cover;
